Fixed some layout issues with bootstrap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,23 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    font-family: "Red Hat Display", sans-serif;
+    font-optical-sizing: auto;
+}
+h1{
+    font-size: 4vh !important;
+    color: lightgray
+}
+span {
+    color: lightgrey;
+}
+#ppal {
+    border: 2px solid lightgrey;
+    -webkit-box-shadow: 0px 10px 18px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 18px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 18px 0px rgba(0,0,0,0.75);
+}
 li:hover > * {
 visibility: visible;
 float: right;
